--- a/assets/css/app-dark.scss
+++ b/assets/css/app-dark.scss
@@ -3,6 +3,11 @@
 @import 'node_modules/bootstrap/scss/functions';
 @import 'node_modules/bootstrap/scss/variables';
 @import 'variables';
+
+$blue: #20C1ED;
+$cyan: #9DE5F9;
+$green: #269C32;
+
 @import 'node_modules/bootstrap/scss/mixins';
 @import 'node_modules/@forevolve/bootstrap-dark/scss/bootstrap-prefers-dark';
 
